# grammar-checker

./: LICENSE  README.md  grammar-checker.cabal
app/: Main.hs
src/: Grammar.hs  Parser.hs
