cabal-version:      3.0
name:               grammar-checker

-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           English Grammar checker.
-- description:        
license:            BSD-3-Clause
license-file:       LICENSE
author:             Justin Grubbs
maintainer:         grubbsjr@hendrix.edu
-- copyright:
build-type:         Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    README.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options:    -Wall

executable grammar-checker
    import:         warnings
    main-is:        Main.hs
    -- other-modules:  
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1,
                        grammar-checker
    hs-source-dirs:   app
    default-language: Haskell2010

library
    import:             warnings
    -- ghc-options:
    -- default-extensions:
    hs-source-dirs:     src
    exposed-modules:    Grammar, 
                        Parser
    build-depends:      base ^>=4.17.2.1, 
                        megaparsec, 
                        parallel,
                        mtl
    default-language:   Haskell2010

